--- a/css/style.css
+++ b/css/style.css
@@ -2189,7 +2189,7 @@ ul {
 
 /* line 9, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
 .main_menu .navbar-brand {
-  padding-top: 1rem;
+  padding-top: rem;
   padding-bottom: 0px;
 }
 
@@ -2373,7 +2373,7 @@ ul {
   width: 100%;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
   top: 0;
-  background-color: #ff0000;
+  background-color: #1f213f;
 }
 
 /* line 179, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
@@ -2435,7 +2435,7 @@ ul {
     left: 0;
     top: 50px;
     width: 100%;
-    background-color: #fff;
+    background-color: rgb(23, 69, 207);
     text-align: center !important;
   }
   /* line 246, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
@@ -2476,7 +2476,7 @@ ul {
     left: 0;
     top: 50px;
     width: 100%;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     text-align: center !important;
   }
   /* line 291, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
