--- a/css/style.css
+++ b/css/style.css
@@ -2180,7 +2180,7 @@ ul {
 /**************menu part start*****************/
 /* line 2, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
 .main_menu {
-  position:relative;
+  position:absolute;
   left: 0;
   top: 0;
   width: 100%;
