--- a/css/style.css
+++ b/css/style.css
@@ -458,7 +458,7 @@ ul {
 @media only screen and (min-width: 1200px) and (max-width: 3640px) {
   /* line 238, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_common.scss */
   .container {
-    max-width: 1800px;
+    max-width: 90%;
   }
 }
 
